--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -8,6 +8,7 @@
     <button
       (click)="openDialog()"
       mat-flat-button
+      tourAnchor="{{TourType.NEW_INVITE_BUTTON}}"
       type="submit"
       class="mt-12 mb-12"
       color="primary">
