add variables for new translations

--- a/src/app/shared/components/start-tour/start-tour.component.html
+++ b/src/app/shared/components/start-tour/start-tour.component.html
@@ -3,7 +3,7 @@
 }
 @if (data.description) {
   <mat-dialog-content>
-    <p>{{ data.description }}</p>
+    <p class="description">{{ data.description }}</p>
   </mat-dialog-content>
 }
 
