update translation files,remove support page

--- a/src/app/terms-acceptance/terms-acceptance.component.html
+++ b/src/app/terms-acceptance/terms-acceptance.component.html
@@ -15,7 +15,7 @@
             <a href="" (click)="openTerms($event)" class="terms-link">
               {{ 'cgu.terms' | translate }}
             </a>
-            {{ 'cgu.before' | translate }}
+            {{ 'cgu.before' | translate: configService.config }}
           </mat-checkbox>
         </section>
         <div class="back">
