fix tour backdrop

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -189,3 +189,11 @@ markdown {
     display: inline;
   }
 }
+
+.z-index-9999 {
+  z-index: 9999;
+}
+
+.overflow-hidden {
+  overflow: hidden !important;
+}
