--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="data.status !== 'ACCEPTED'">
-  <div *ngIf="!myForm" class="invite-type-container">
+  <div *ngIf="!myForm" class="invite-type-container" id="invite-type-container">
     <div class="invite-type-header">
       <h1 class="d-block" mat-dialog-title>
         {{ 'inviteForm.sendAnInvitation' | translate }}
@@ -184,7 +184,9 @@
           </div>
 
           <div *ngIf="isPatientInvite" class="field-container">
-            <div class="field-container-inner">
+            <div
+              class="field-container-inner"
+              tourAnchor="{{ TourType.INVITE_FORM_CONTACT_INPUT }}">
               <mat-form-field>
                 <mat-label class="label">
                   {{
@@ -195,7 +197,6 @@
                 <input
                   [(ngModel)]="data.patientContact"
                   matInput
-                  tourAnchor="{{ TourType.INVITE_FORM_CONTACT_INPUT }}"
                   placeholder="+4179..."
                   formControlName="patientContactFormControl"
                   name="patientContact"
