add support for 'onclicl' in footer markdown

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="app-footer">
   <div class="footer-content">
-    <markdown [src]="markdownUrl"> </markdown>
+      <div [innerHTML]="processedMarkdown"></div>
   </div>
 </footer>
