--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -2,7 +2,7 @@
   <app-top-nav title="invitations" icon="invite"></app-top-nav>
   <div class="invitations-wrapper">
     <div class="desc">
-      <h2 class="d-inline">{{ 'invitations.title' | uppercase }}</h2>
+      <h2 class="d-inline">{{ 'invitations.title' | translate }}</h2>
     </div>
 
     <button
