refs #7986, Translation Ukrainian missing

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -122,7 +122,7 @@
           <div class="c_info_wrap">
             <div class="c_info_row_title">{{ 'chat.sex' | translate }}</div>
             <div class="c_info_row_content">
-              {{ consultation.consultation.gender | translatedGender }}
+              {{  'inviteForm.' + consultation.consultation.gender | translate }}
             </div>
           </div>
           <div
