--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -151,7 +151,7 @@
           <div class="resume-element">
             <div class="resume-label">{{ 'overlay.sex' | translate }}</div>
             <div class="resume-value">
-              {{ consultation.consultation.gender | translatedGender }}
+              {{ 'inviteForm.' + consultation.consultation.gender | translate }}
             </div>
           </div>
           <div
