--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -154,106 +154,47 @@
             </ng-container>
           </td>
         </ng-container>
-
-        <td class="hidden-mobile">
-          <span class="tile-header">
-            {{ 'invitations.guestInvite' | translate }}
-          </span>
-
-          <ng-container *ngIf="invite.guestInvite">
-            <ng-container *ngIf="invite.guestInvite.status === 'SENT'">
-              {{ 'invitations.sent' | translate }}
-            </ng-container>
-            <ng-container *ngIf="invite.guestInvite.status === 'ACCEPTED'">
-              <span style="color: green">
-                {{ 'invitations.accepted' | translate }}
-              </span>
-            </ng-container>
-            <ng-container *ngIf="invite.guestInvite.status === 'COMPLETE'">
-              {{ 'invitations.closed' | translate }}
-            </ng-container>
-            <ng-container *ngIf="invite.guestInvite.status === 'CANCELED'">
-              {{ 'invitations.canceled' | translate }}
-            </ng-container>
-          </ng-container>
-
-          <ng-container *ngIf="!invite.guestInvite">
-            {{ 'invitations.none' | translate }}
-          </ng-container>
-        </td>
-        <td class="hidden-mobile">
-          <span class="tile-header">
-            {{ 'invitations.translatorRequestInvite' | translate }}
-          </span>
-          <ng-container *ngIf="invite.translatorRequestInvite">
-            <ng-container
-              *ngIf="invite.translatorRequestInvite.status === 'SENT'">
-              {{ 'invitations.sent' | translate }}
-            </ng-container>
-            <ng-container
-              *ngIf="invite.translatorRequestInvite.status === 'ACCEPTED'">
-              <span style="color: green">
-                {{ 'invitations.accepted' | translate }}
-              </span>
-            </ng-container>
-            <ng-container
-              *ngIf="invite.translatorRequestInvite.status === 'COMPLETE'">
-              {{ 'invitations.closed' | translate }}
-            </ng-container>
-            <ng-container
-              *ngIf="invite.translatorRequestInvite.status === 'CANCELED'">
-              {{ 'invitations.canceled' | translate }}
-            </ng-container>
-            <ng-container
-              *ngIf="invite.translatorRequestInvite.status === 'REFUSED'">
-              <span style="color: red">
-                {{ 'invitations.refused' | translate }}
-              </span>
-            </ng-container>
-          </ng-container>
-          <ng-container *ngIf="!invite.translatorRequestInvite">
-            {{ 'invitations.none' | translate }}
-          </ng-container>
-        </td>
-        <td style="display: flex; flex-direction: column">
+        <td>
           <span class="tile-header"></span>
           <div *ngIf="invite.resending" class="loading">
             <mat-spinner [diameter]="35"></mat-spinner>
           </div>
-          <button
-            *ngIf="
+            <div class="d-flex flex-column">
+                <button
+                        *ngIf="
               !invite.resending &&
               (!invite.translatorRequestInvite ||
                 invite.translatorRequestInvite.status === 'ACCEPTED')
             "
-            mat-stroked-button
-            color="primary"
-            (click)="resendInvite(invite.id)"
-            class="mb-12"
-            title="{{
+                        mat-stroked-button
+                        color="primary"
+                        (click)="resendInvite(invite.id)"
+                        class="mb-12"
+                        title="{{
               'invitations.sendAgainTheSMSOrEmailInvite' | translate
             }}">
-            {{ 'invitations.sendAgain' | translate }}
-          </button>
-          <button
-            (click)="openDialog(invite)"
-            mat-stroked-button
-            color="primary"
-            *ngIf="
+                    {{ 'invitations.sendAgain' | translate }}
+                </button>
+                <button
+                        (click)="openDialog(invite)"
+                        mat-stroked-button
+                        color="primary"
+                        *ngIf="
               invite.translatorRequestInvite &&
               invite.translatorRequestInvite.status === 'REFUSED'
             ">
-            {{ 'consultations.sendAgainANewInvitation' | translate }}
-          </button>
-          <button
-            mat-stroked-button
-            color="primary"
-            [routerLink]="['/invitations/' + invite.id]">
-            {{ 'invitations.edit' | translate }}
-          </button>
+                    {{ 'consultations.sendAgainANewInvitation' | translate }}
+                </button>
+                <button
+                        mat-stroked-button
+                        color="primary"
+                        [routerLink]="['/invitations/' + invite.id]">
+                    {{ 'invitations.edit' | translate }}
+                </button>
+            </div>
         </td>
-        <td>
-          <ng-container *ngIf="invite.status !== 'ACCEPTED'">
+        @if (invite.status !== 'ACCEPTED') {
+          <td>
             <span class="tile-header"></span>
             <div *ngIf="invite.revoking" class="loading">
               <mat-spinner [diameter]="35"></mat-spinner>
@@ -269,8 +210,8 @@
               }}">
               {{ 'invitations.cancel' | translate }}
             </button>
-          </ng-container>
-        </td>
+          </td>
+        }
       </tr>
     </table>
 
