--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -72,12 +72,12 @@
                 <span
                   *ngIf="invite.guestInvite.emailAddress"
                   [matTooltip]="'invitations.guestTooltip' | translate">
-                  {{ invite.emailAddress }}
+                  {{ invite.guestInvite.emailAddress }}
                 </span>
                 <span
                   *ngIf="invite.guestInvite.phoneNumber"
                   [matTooltip]="'invitations.guestTooltip' | translate">
-                  {{ invite.phoneNumber }}
+                  {{ invite.guestInvite.phoneNumber }}
                 </span>
               </span>
             }
@@ -159,39 +159,39 @@
           <div *ngIf="invite.resending" class="loading">
             <mat-spinner [diameter]="35"></mat-spinner>
           </div>
-            <div class="d-flex flex-column">
-                <button
-                        *ngIf="
-              !invite.resending &&
-              (!invite.translatorRequestInvite ||
-                invite.translatorRequestInvite.status === 'ACCEPTED')
-            "
-                        mat-stroked-button
-                        color="primary"
-                        (click)="resendInvite(invite.id)"
-                        class="mb-12"
-                        title="{{
-              'invitations.sendAgainTheSMSOrEmailInvite' | translate
-            }}">
-                    {{ 'invitations.sendAgain' | translate }}
-                </button>
-                <button
-                        (click)="openDialog(invite)"
-                        mat-stroked-button
-                        color="primary"
-                        *ngIf="
-              invite.translatorRequestInvite &&
-              invite.translatorRequestInvite.status === 'REFUSED'
-            ">
-                    {{ 'consultations.sendAgainANewInvitation' | translate }}
-                </button>
-                <button
-                        mat-stroked-button
-                        color="primary"
-                        [routerLink]="['/invitations/' + invite.id]">
-                    {{ 'invitations.edit' | translate }}
-                </button>
-            </div>
+          <div class="d-flex flex-column">
+            <button
+              *ngIf="
+                !invite.resending &&
+                (!invite.translatorRequestInvite ||
+                  invite.translatorRequestInvite.status === 'ACCEPTED')
+              "
+              mat-stroked-button
+              color="primary"
+              (click)="resendInvite(invite.id)"
+              class="mb-12"
+              title="{{
+                'invitations.sendAgainTheSMSOrEmailInvite' | translate
+              }}">
+              {{ 'invitations.sendAgain' | translate }}
+            </button>
+            <button
+              (click)="openDialog(invite)"
+              mat-stroked-button
+              color="primary"
+              *ngIf="
+                invite.translatorRequestInvite &&
+                invite.translatorRequestInvite.status === 'REFUSED'
+              ">
+              {{ 'consultations.sendAgainANewInvitation' | translate }}
+            </button>
+            <button
+              mat-stroked-button
+              color="primary"
+              [routerLink]="['/invitations/' + invite.id]">
+              {{ 'invitations.edit' | translate }}
+            </button>
+          </div>
         </td>
         @if (invite.status !== 'ACCEPTED') {
           <td>
@@ -204,10 +204,10 @@
               (click)="revokeInvite(invite.id)"
               color="warn"
               mat-flat-button
-              title="{{
+              [matTooltip]="
                 'invitations.cancelThisInvitationToJoinAConsultation'
                   | translate
-              }}">
+              ">
               {{ 'invitations.cancel' | translate }}
             </button>
           </td>
